--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.7.4",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.8.0",
     "react-jss": "^10.10.0",
     "react-router-dom": "^6.11.1",
